# main.go
@@ -4,8 +4,11 @@ import (
 	"fiber-go/app/routes"
 	"fiber-go/database"
 	_ "fiber-go/docs"
+	"fmt"
+	"os/exec"
 
 	"github.com/gofiber/fiber/v2"
+	"github.com/gofiber/fiber/v2/middleware/cors"
 	"github.com/gofiber/fiber/v2/middleware/helmet"
 	fiberSwagger "github.com/swaggo/fiber-swagger" // fiber-swagger middleware
 )
@@ -24,26 +27,41 @@ import (
 
 // @host localhost:3000
 // @BasePath /
+
+// @securityDefinitions.apikey Bearer
+// @in header
+// @name Authorization
+// @description use `Bearer <xx token xx>` to authenticate
 func main() {
 	// database.InitDB()
 	database.Conn()
 
+	cmd := exec.Command("/bin/sh", "-c", "make generate_docs;")
+	err := cmd.Run()
+
+	if err != nil {
+		fmt.Println("command fail")
+	} else {
+		fmt.Println("command success")
+	}
+
 	app := fiber.New(fiber.Config{
-		Prefork:       true,
+		Prefork:       false,
 		CaseSensitive: true,
 		StrictRouting: true,
 		ServerHeader:  "Fiber",
 		AppName:       "fiber-go v1.0.1",
 	})
 
-	// app.Use(cors.New(cors.Config{
-	// 	AllowOrigins: "*",
-	// 	AllowHeaders: "Origin, Content-Type, Accept",
-	// 	// AllowOriginsFunc: func(origin string) bool {
-	// 	// 	return os.Getenv("ENVIRONMENT") == "development"
-	// 	// },
-	// 	AllowCredentials: false,
-	// }))
+	app.Use(cors.New(cors.Config{
+		AllowOrigins: "*",
+		AllowHeaders: "Origin, Content-Type, Accept",
+		// AllowOriginsFunc: func(origin string) bool {
+		// 	return os.Getenv("ENVIRONMENT") == "development"
+		// },
+		AllowCredentials: false,
+	}))
+
 	app.Use(helmet.New())
 
 	app.Get("/swagger/*", fiberSwagger.WrapHandler)
